src/views/Nft/SellRequest/style.module.scss
@use '/src/scss/colors';
@import '/src/styles/fonts';

.container {
  padding: 90px 0;

  .totalList {
    width: 100%;
    .total {
      display: flex;
      align-items: center;
      justify-content: space-between;
      padding: 7px 0;
      border-bottom: 1px solid #f0f0f0;
      span {
        font-weight: 600;
        font-size: 12px;
        line-height: 18px;
        color: #7d8890;
        &:last-child {
          color: #1f1f1f;
        }
      }
    }
  }
  .img {
    overflow: hidden;
    position: relative;
    display: flex;
    flex-direction: column;
    align-items: flex-end;
    background: #fff;

    border: 1px solid colors.$icon;
    border-radius: 7px;
    overflow: hidden;
    cursor: pointer;

    .soldImg {
      position: absolute;
      bottom: 0;
      opacity: 0.6;
      background: #1f1f1f;
      z-index: 12;
      width: 100%;
      height: 554px;
    }

    img {
      object-fit: cover;
      border-radius: 0 !important;
      padding: 0;
      margin: 0;
    }

    span {
      font-weight: 600;
      color: colors.$text;
      cursor: pointer;
      transition: cubic-bezier(0.165, 0.84, 0.44, 1) 0.4s all;

      &.active {
        color: colors.$primary;
      }

      &:hover {
        color: colors.$primary;
      }

      svg {
        margin-left: 5px;
      }
    }
  }

  .link {
    color: #515151;
    text-decoration: underline;

    @include fontBodyXS;
  }
}

